2016-11-17  Oliver Kiddle  <opk@zsh.org>

	* 39952: Src/Zle/zle_params.c, Doc/Zsh/zle.yo: add registers
	special parameter to provide access to the vi register
	buffers from a zle widget function

2016-11-16  Oliver Kiddle  <opk@zsh.org>

	* 39945: Src/Zle/compcore.c, Completion/Base/Core/_message,
	Test/Y03arguments.ztst: allow further tab presses to move on
	to menu completion even when compstate[insert] is emptied

2016-11-15  Peter Stephenson  <p.stephenson@samsung.com>

	* 39949: Src/subst.c, Src/utils.c, Test/B09hash.ztst: "-" is
	allowed in named directories, so needs a special case when
	sh-tokenized for possible ranges.

	* 39947: Test/D04parameter.ztst: Test out-of-rantge multiple
	array subscripts with and without (@).

2016-11-14  Barton E. Schaefer  <schaefer@zsh.org>

	* 39943: Src/utils.c: no need to compute arrlen() in arrdup_max()
	when max == 0.

2016-11-15  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 39937: Src/params.c: fix a problem introduced by 39886.
	$a[i,j] should become an empty array if i>j.

2016-11-14  Peter Stephenson  <p.stephenson@samsung.com>

	* 39906: Src/utils.c: More optimisation of multibyte handling
	for US-ASCII along existing lines.

2016-11-13  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Src/Zle/zle_utils.c: comment in zlecallhook() points
	to redrawhook() just in case

	* 39934: Src/Zle/zle_main.c: if a widget execution fails, try to
	execute a corresponding immortal widget instead.

	* 39933: Src/Zle/zle_main.c: more of zlecallhook() in redrawhook(),
	add commentary on some of the differences

	* 39929: Doc/Zsh/zle.yo: clarify execute{,-last}-named-cmd

2016-11-12  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Etc/zsh-development-guide: add list of standard
	module hooks with corresponding macro names

2016-11-12  Oliver Kiddle  <opk@zsh.org>

	* Paul Seyfert: 39920: Completion/Redhat/Command/_yum:
	extend yum completion to cover more yum commands
